# moniTer

./: CMakeLists.txt  Makefile  README.md  bios-monitor
include/: common.h  cpu.h  data.h  disk.h  gpu.h  memory.h  network.h  process.h  sensors.h  ui.h  util.h
src/: cpu.c  data.c  disk.c  gpu.c  main.c  memory.c  network.c  process.c  sensors.c  ui.c  util.c
